# booger

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  NEXT.md  PLAN.md  README.md  booger-proxy.sh
.cursor/: mcp.json
doc/: architecture.md  concepts.md  demo.md  future.md  guide.md  licenses.md  search.md  security.md  verification-notes.md
src/: config.rs  lib.rs  main.rs
src/context/: annotations.rs  mod.rs  workset.rs
src/embed/: mod.rs  ollama.rs
src/git/: diff.rs  format.rs  mod.rs
src/index/: chunker.rs  hasher.rs  mod.rs  walker.rs
src/mcp/: mod.rs  protocol.rs  resources.rs  server.rs  tools.rs
src/search/: mod.rs  semantic.rs  text.rs
src/store/: schema.rs  sqlite.rs
