[package]
name = "booger"
version = "0.1.0"
edition = "2024"
description = "Local code search engine, index, and working memory for AI agents"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
blake3 = "1.8.3"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
ignore = "0.4.25"
regex = "1.12.3"
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "1.0.3"
tree-sitter = "0.24"
tree-sitter-c = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
ureq = { version = "3.2.0", features = ["json"] }

[dev-dependencies]
tempfile = "3.25.0"
